--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -12,6 +12,7 @@ QT5_USE_MODULES ( graviz
    Widgets 
 )
 SET ( COMMANDS_LIB_NAME "commands" )
+SET ( SOLVER_APPS_LIB_NAME "solverApps" )
 
 TARGET_LINK_LIBRARIES ( ${GRAVIZ_APP_NAME}
    ${COMMANDS_LIB_NAME}
