--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ SET ( CMAKE_INCLUDE_CURRENT_DIR ON )
 FIND_PACKAGE ( Qt5Widgets REQUIRED )
 FIND_PACKAGE ( Qt5Quick REQUIRED )
 FIND_PACKAGE ( Qt5Core REQUIRED )
+FIND_PACKAGE ( Qt5Network REQUIRED )
 FIND_PACKAGE ( Boost REQUIRED COMPONENTS filesystem system program_options )
 
 set(Boost_USE_STATIC_LIBS OFF)
