--- a/source/framework/Commands/CMakeLists.txt
+++ b/source/framework/Commands/CMakeLists.txt
@@ -8,7 +8,7 @@ ADD_LIBRARY ( ${COMMANDS_LIB_NAME} STATIC ${COMMANDS_LIB_SOURCES})
 
 FIND_PACKAGE ( Qt5Core REQUIRED )
 
-QT5_USE_MODULES ( ${COMMANDS_LIB_NAME} Core Widgets )
+QT5_USE_MODULES ( ${COMMANDS_LIB_NAME} Core Widgets Network )
 
 TARGET_LINK_LIBRARIES ( ${COMMANDS_LIB_NAME}
    ${Boost_LIBRARIES}
