--- a/source/framework/Commands/CMakeLists.txt
+++ b/source/framework/Commands/CMakeLists.txt
@@ -12,6 +12,7 @@ QT5_USE_MODULES ( ${COMMANDS_LIB_NAME} Core Widgets Network )
 
 TARGET_LINK_LIBRARIES ( ${COMMANDS_LIB_NAME}
    ${Boost_LIBRARIES}
+   ${CMAKE_THREAD_LIBS_INIT}
 )
 
 INSTALL (
