win32 workable basic

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,5 +26,9 @@ INCLUDE_DIRECTORIES ( "externalLibs" )
 
 SET ( CMAKE_CXX_FLAGS "-std=c++11" )
 
+IF ( "${GRAVIZ_TARGET_NAME}" STREQUAL "win32" )
+	SET ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWIN_TARGET" )
+ENDIF ()
+
 ADD_SUBDIRECTORY ( source )
-#ADD_SUBDIRECTORY ( externalLibs )
+ADD_SUBDIRECTORY ( externalLibs )
