Provide config files for future support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,5 +30,9 @@ IF ( "${GRAVIZ_TARGET_NAME}" STREQUAL "win32" )
     SET ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWIN_TARGET" )
 ENDIF ()
 
+IF ( "${CMAKE_BUILD_TYPE}" STREQUAL "Release" )
+   SET ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DQT_NO_DEBUG_OUTPUT" )
+ENDIF ()
+
 ADD_SUBDIRECTORY ( source )
 ADD_SUBDIRECTORY ( externalLibs )
