--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -27,8 +27,8 @@ INSTALL (
    RUNTIME DESTINATION ${INSTALL_BIN_DIR}
 )
 
-
-
-
-
-
+INSTALL (
+   DIRECTORY "configs"
+   DESTINATION ${INSTALL_BIN_DIR}
+   FILES_MATCHING PATTERN "*.xml"
+)
