--- a/source/framework/Commands/CMakeLists.txt
+++ b/source/framework/Commands/CMakeLists.txt
@@ -13,6 +13,7 @@ QT5_USE_MODULES ( ${COMMANDS_LIB_NAME} Core Widgets Network )
 TARGET_LINK_LIBRARIES ( ${COMMANDS_LIB_NAME}
    ${Boost_LIBRARIES}
    ${CMAKE_THREAD_LIBS_INIT}
+   ${GRAVIZSETTINGS_LIB_NAME}
 )
 
 INSTALL (
