--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ FIND_PACKAGE ( Qt5Widgets REQUIRED )
 FIND_PACKAGE ( Qt5Quick REQUIRED )
 FIND_PACKAGE ( Qt5Core REQUIRED )
 FIND_PACKAGE ( Qt5Network REQUIRED )
+FIND_PACKAGE ( Qt5Xml REQUIRED )
 FIND_PACKAGE ( Boost REQUIRED COMPONENTS filesystem system program_options )
 
 set(Boost_USE_STATIC_LIBS ON)
