migrate to new name

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,8 +1,8 @@
-FILE ( GLOB_RECURSE GRAVIZ_SOURCES
+FILE ( GLOB_RECURSE ALGOVI_SOURCES
    "Controller/*.h"
    "Controller/*.cpp"
-   "graviz/*.h"
-   "graviz/*.cpp"
+   "algovi/*.h"
+   "algovi/*.cpp"
    "gui/*.h"
    "gui/*.cpp"
    "gui/*.ui"
@@ -11,21 +11,21 @@ FILE ( GLOB_RECURSE GRAVIZ_SOURCES
    "main.cpp"
 )
 
-SET ( GRAVIZ_APP_NAME "graviz" )
+SET ( ALGOVI_APP_NAME "algovi" )
 
-ADD_EXECUTABLE ( ${GRAVIZ_APP_NAME} ${GRAVIZ_SOURCES} )
+ADD_EXECUTABLE ( ${ALGOVI_APP_NAME} ${ALGOVI_SOURCES} )
 
-QT5_USE_MODULES ( graviz 
+QT5_USE_MODULES ( algovi 
    Widgets
 )
 
 SET ( COMMANDS_LIB_NAME "commands" )
-SET ( GRAVIZSETTINGS_LIB_NAME "settings" )
+SET ( ALGOVISETTINGS_LIB_NAME "settings" )
 SET ( SOLVER_APPS_LIB_NAME "solverApps" )
 
-TARGET_LINK_LIBRARIES ( ${GRAVIZ_APP_NAME}
+TARGET_LINK_LIBRARIES ( ${ALGOVI_APP_NAME}
    ${COMMANDS_LIB_NAME}
-   ${GRAVIZSETTINGS_LIB_NAME}
+   ${ALGOVISETTINGS_LIB_NAME}
    ${Boost_LIBRARIES}
 )
 
@@ -33,7 +33,7 @@ ADD_SUBDIRECTORY ( framework )
 
 INSTALL (
    TARGETS
-      ${GRAVIZ_APP_NAME}
+      ${ALGOVI_APP_NAME}
    RUNTIME DESTINATION ${INSTALL_BIN_DIR}
 )
 
