--- a/source/framework/settings/CMakeLists.txt
+++ b/source/framework/settings/CMakeLists.txt
@@ -1,20 +1,20 @@
 
-FILE ( GLOB_RECURSE GRAVIZSETTINGS_LIB_SOURCES
+FILE ( GLOB_RECURSE ALGOVISETTINGS_LIB_SOURCES
    "*.h"
    "*.cpp"
 )
 
-ADD_LIBRARY ( ${GRAVIZSETTINGS_LIB_NAME} STATIC ${GRAVIZSETTINGS_LIB_SOURCES})
+ADD_LIBRARY ( ${ALGOVISETTINGS_LIB_NAME} STATIC ${ALGOVISETTINGS_LIB_SOURCES})
 
-QT5_USE_MODULES ( ${GRAVIZSETTINGS_LIB_NAME} Core Xml )
+QT5_USE_MODULES ( ${ALGOVISETTINGS_LIB_NAME} Core Xml )
 
-TARGET_LINK_LIBRARIES ( ${GRAVIZSETTINGS_LIB_NAME}
+TARGET_LINK_LIBRARIES ( ${ALGOVISETTINGS_LIB_NAME}
    ${Boost_LIBRARIES}
 )
 
 INSTALL (
    TARGETS
-      ${GRAVIZSETTINGS_LIB_NAME}
+      ${ALGOVISETTINGS_LIB_NAME}
    RUNTIME DESTINATION ${INSTALL_BIN_DIR}
    LIBRARY DESTINATION ${INSTALL_LIB_DIR}
    ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
